--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "l",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://t1ep1l0t.githab.io/pay-to-go/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "sass": "^1.66.0",
@@ -16,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "gh-pages": "^6.0.0",
     "vite": "^4.1.4"
   }
 }
